create main functions

--- a/Desktop/testing/index.html
+++ b/Desktop/testing/index.html
@@ -8,27 +8,35 @@
   </head>
   <body>
     <div class="calculate">
-      <p class="display"></p>
+      <div class="display">
+        <span></span>
+        <p class="result"></p>
+      </div>
       <div class="btn-block">
-        <button class="deleteAll">DelAll</button>
-        <button><<</button>
-        <button>%</button>
-        <button>/</button>
+        <button>C</button>
+        <button>(</button>
+        <button>)</button>
+        <button>arrow</button>
+        <!-- <button>%</button>
+        <button></button>
+        <button></button>
+        <button></button> -->
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button>*</button>
+        <button>/</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
-        <button>-</button>
+        <button>*</button>
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button class="plus">+</button>
-        <button>.</button>
+        <button>-</button>
         <button>0</button>
-        <button class="result">=</button>
+        <button>.</button>
+        <button>=</button>
+        <button>+</button>
       </div>
     </div>
   </body>
